MVC : Account, frotend

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
+  "Urls": "https://localhost:5005",
   "AppSettings": {
-    "API_SERVER": "http://localhost:5000"
+    "API_SERVER": "https://localhost:5000"
   }
 }
